namespaces/live.cloud-platform.service.justice.gov.uk/folarinoyenuga/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "folarinoyenuga"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Platforms"
    cloud-platform.justice.gov.uk/slack-channel: "cloud-platform"
    cloud-platform.justice.gov.uk/application: "annotation-validation"
    cloud-platform.justice.gov.uk/owner: "webops: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cloud-platform-environments"
    cloud-platform.justice.gov.uk/team-name: "webops"
    cloud-platform.justice.gov.uk/review-after: ""
